[New] Fix red & delete long string

--- a/Bibs/fin.bib
+++ b/Bibs/fin.bib
@@ -255,7 +255,7 @@
 @article{chen2018deeplab,
   title={Deeplab: Semantic image segmentation with deep convolutional nets, atrous convolution, and fully connected crfs},
   author={Chen, Liang-Chieh and Papandreou, George and Kokkinos, Iasonas and Murphy, Kevin and Yuille, Alan L},
-  journal={IEEE transactions on pattern analysis and machine intelligence},
+  journal={PAMI},
   volume={40},
   number={4},
   pages={834--848},
