--- a/Bibs/thesis.bib
+++ b/Bibs/thesis.bib
@@ -25,7 +25,7 @@
 @article{kohli2009robust,
 	title={Robust higher order potentials for enforcing label consistency},
 	author={Kohli, Pushmeet and Torr, Philip HS and others},
-	journal={International Journal of Computer Vision},
+	journal={IJCV},
 	volume={82},
 	number={3},
 	pages={302--324},
@@ -35,7 +35,7 @@
 @article{gouldlearning,
   title={Learning Weighted Lower Linear Envelope Potentials in Binary Markov Random Fields},
   author={Gould, Stephen},
-  journal={IEEE transactions on pattern analysis and machine intelligence},
+  journal={PAMI},
   volume={37},
   number={7},
   pages={1336--1346},
@@ -129,11 +129,22 @@
 	organization={IEEE}
 }
 
+@article{hochreiter1997long,
+  title={Long short-term memory},
+  author={Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
+  journal={Neural computation},
+  volume={9},
+  number={8},
+  pages={1735--1780},
+  year={1997},
+  publisher={MIT Press}
+}
+
 % --------------- Background ----------------------------------
 @article{achanta2012slic,
   title={SLIC superpixels compared to state-of-the-art superpixel methods},
   author={Achanta, Radhakrishna and Shaji, Appu and Smith, Kevin and Lucchi, Aurelien and Fua, Pascal and S{\"u}sstrunk, Sabine},
-  journal={IEEE transactions on pattern analysis and machine intelligence},
+  journal={PAMI},
   volume={34},
   number={11},
   pages={2274--2282},
